--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=academy-bank
 
-spring.datasource.url=jdbc:mysql://localhost:3306/academy_bank
+spring.datasource.url=jdbc:mysql://localhost:3306/lab8_web
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Quenroi6212@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
